# SeRT-Training-Platform

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  README.md  RETROSPECTIVE.md  RUNBOOK.md  bhaptics_udp_bridge.py  cache_timing_report.md  draft.md  flags.env  launch_isaac.sh  pyproject.toml
.github/: dependabot.yml
api/: app.py
artifacts/: MANIFEST.md
docs/: pipeline.md  pivot-decision.md  porting_requirements.md  pseudo_errp_report_plan.md  report_review_against_repo.md  rl_progress.md  rl_trajectory_schema.md  takehome_report_files.md  week14_final_submission.md
metrics/: README.md  compute_dora.py  session_events.csv
proposal/: 01_executive_summary.md
scripts/: bhaptics_udp_bridge.py  convert_errp_to_events.py  csv_to_tensorboard.py  generate_persona_feedback.py  generate_sample_logs.py  inspect_bhaptics_python_api.py  inspect_hand_tracking_udp.py  run_ab_experiment.py  steamvr_compositor_switch.py  test_haptics_udp.py
tests/: conftest.py  test_ab_test.py  test_event_logger.py  test_feature_flags.py  test_v3_builtin_safety_geometry.py  test_v3_human_replay_safety.py  test_v3_surface_observation.py
v1/: eeg_data_20260320_231025.csv  haptic_manager.py  main.py  print_cameras.py  read_eeg.py  robot_manager.py  scene_manager.py  stack_blocks_with_human.usd  test_EEG.py
v2/: __init__.py  analyze_rollout_failures.py  app_config.py  collect_expert_trajectories.py  compare_rollout_analyses.py  config.py  debug_rollout_seeds.py  errp_markers.csv  evaluate_rollout_policy.py  event_logger.py  feature_flags.py  hand_tracking.py  human_avatar.py  inspect_hri_trajectory.py  main.py  pick_controller.py  rollout_bc_policy.py  scene_setup.py  train_risk_model.py  train_rl.py  vr_arm.py  vr_avatar.py
v3_chan/: __init__.py  ab_test.py  app_config.py  check_openxr_hand_tracking.md  check_openxr_hand_tracking.py  end_effector_safety_geometry.py  end_effector_safety_runtime.py  evaluate_rollout_policy.py  event_logger.py  gripper_camera.py  hand_tracking.py  haptics_udp.py  hri_data_variables.md  hri_episode_000000_summary.md  hri_obs_recorder.py  inspect_panda_collision_geometry.py  main.py  panda_robot.py  (+12 more)
(+157 files in other folders)
