[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "sert-vr-training"
version = "1.0.1"
description = "SeRT VR Training Platform — Isaac Sim based neuro-rehabilitation simulation"
readme = "README.md"
authors = [
    { name = "LimChanju", email = "dlackswn0716@gmail.com" },
]
requires-python = ">=3.9"
keywords = [
    "isaac-sim",
    "vr",
    "rehabilitation",
    "neuroscience",
    "robotics",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "h5py>=3.8",
    "numpy>=1.24",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pip-audit>=2.6",
]

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "v2*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=v2.feature_flags --cov=v2.ab_test --cov=v2.event_logger --cov-fail-under=80 --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "scripts/*", "api/*"]
